fixed minor alignment issue

--- a/src/Container/Gallery/gallery.css
+++ b/src/Container/Gallery/gallery.css
@@ -53,7 +53,7 @@
     font-weight: 600;
     font-size: 22px;
     text-transform: uppercase;
-    margin-left: 148px;
+    margin-left: 40px;
     padding: 5px 10px;
     border-bottom: 4px solid #821169 ;
     margin-bottom: 64px;
